--- a/src/app/transaction-management/tr-report/tr-report.component.html
+++ b/src/app/transaction-management/tr-report/tr-report.component.html
@@ -71,6 +71,18 @@
         </tr>
         </tbody>
       </table>
+
+
+      <div class="chart-wrapper">
+        <canvas baseChart 
+            [datasets]="lineChartData" 
+            [labels]="lineChartLabels" 
+            [colors]="lineChartColors" 
+            [legend]="lineChartLegend" 
+            [chartType]="'bar'"
+            [plugins]="lineChartPlugins">
+        </canvas>
+    </div>
     </div>
   </div>
   </div>
